<resources>
    <string name="app_name">Didow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soal">Kata apa yang baru saja kamu dengar?</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Album</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas elementum, dolor non suscipit tincidunt, tellus elit pulvinar metus, nec sodales odio est id est. Ut vitae sem consequat, porta felis eu, condimentum ante. Phasellus imperdiet, eros et lacinia lobortis, nunc nibh vehicula enim, a elementum nunc arcu scelerisque eros. Nunc interdum vulputate nisi sit amet finibus. Fusce eu nisl a mi ornare lacinia. Aliquam eu tellus volutpat, varius tortor eu, pretium elit. Nunc mattis hendrerit tellus. Phasellus aliquam odio non feugiat sodales. Praesent finibus lectus et augue placerat, a semper turpis dictum. Sed fringilla sodales ante ac molestie.</string>
    <string name="normal_description">Pada mode ini soal yang diberikan akan secara otomatis menyesuaikan dengan kemampuan anak</string>
  
    <string name="speaker_panduan_description">Tekan tombol pengeras suara untuk mendengarkan kata</string>
    <string name="speaker_panduan">Bantuan Suara</string>
    <string name="hint_panduan_description">Tekan tombol \"HINT\" untuk melihat bantuan gambar</string>
    <string name="hint_panduan_add_hangman_description">Tekan tombol \"HINT\" untuk melihat bantuan gambar dan hangman</string>
    <string name="hint_memilih_description">Pilih salah satu pilihan jawaban sesuai kata yang terdengar</string>
    <string name="hint_susun_description">Susun kata dengan memilih huruf yg disediakan satu per satu</string>
    <string name="hint_tulis_description">Tulis kata yang kamu dengar pada kertas. Untuk tulisan, Kamu lebih disarankan menggunakan <b>huruf kapital</b></string>
    <string name="hint_huruf_pilih_description">Huruf yang kamu pilih akan masuk ke dalam kotak jawaban</string>
    <string name="hint_tekan_huruf_hapus_description">Tekan huruf yang ada pada kotak jawaban untuk mengembalikan huruf</string>
    <string name="hint_tekan_kamera_gallery_description">Tekan tombol kamera atau galeri untuk mengambil foto tulisan kamu</string>
    <string name="hint_ambil_description">Atur dan sesuaikan foto tulisan mu agar dapat terdeteksi</string>
    <string name="hint_check_answer_description">Tekan tombol \"LANJUT\" untuk mengetahui jawabanmu</string>
    <string name="hint_kotak_terisi_description">Saat kotak jawaban penuh maka kamu sudah menjawab</string>
    <string name="hint_jawaban_salah">Jika jawaban yang dipilih salah maka kamu dapat memperbaikinya nanti</string>
  
    <string name="kustom_description">Pada mode ini Anda dapat menyesuaikan jumlah dan tingkat kesulitan soal sesuai preferensi</string>

    <string name="detail_report_rendah">Selamat kamu telah menyelesaikan asesmen awal! Tidak perlu berkecil hati, justru kamu harus semakin semangat agar dapat menguasai kosakata yang ada. Yuk daftar sekarang agar kamu bisa mulai latihan bersama Didow!</string>
    <string name="detail_report_tinggi">Selamat kamu telah menyelesaikan asesmen awal! Kamu sudah cukup baik dalam kosakata dan menjawab pertanyaan yang ada. Eits! bukan berarti kamu tidak perlu meningkatkan kemampuanmu, Yuk daftar! Agar kamu semakin pandai dalam mengolah kata bersama Didow!</string>
    <string name="detail_report_menengah">Selamat kamu telah menyelesaikan asesmen awal! Kamu sudah menguasai beberapa kosakata. Ada baiknya kamu terus belajar agar kamu bisa semakin pandai dalam mengolah kata. Yuk daftar dan mulai latihan sekarang bersama Didow!</string>
</resources>