<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layoutDescription="@xml/panduan_hand_writing_scene">

        <ImageView
            android:id="@+id/logoMenu1"
            android:layout_width="0dp"
            android:layout_height="176dp"
            android:src="@drawable/speaker_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/speaker_panduan"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu1"
            app:layout_constraintStart_toStartOf="@id/logoMenu1"
            app:layout_constraintTop_toBottomOf="@id/logoMenu1" />

        <TextView
            android:id="@+id/descMenu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/speaker_panduan_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu1"
            app:layout_constraintStart_toStartOf="@id/titleMenu1"
            app:layout_constraintTop_toBottomOf="@id/titleMenu1" />

        <ImageView
            android:id="@+id/logoMenu2"
            android:layout_width="0dp"
            android:layout_height="276dp"
            android:src="@drawable/hint_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Tombol Hint"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu2"
            app:layout_constraintStart_toStartOf="@id/logoMenu2"
            app:layout_constraintTop_toBottomOf="@id/logoMenu2" />

        <TextView
            android:id="@+id/descMenu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_panduan_add_hangman_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu2"
            app:layout_constraintStart_toStartOf="@id/titleMenu2"
            app:layout_constraintTop_toBottomOf="@id/titleMenu2" />

        <ImageView
            android:id="@+id/logoMenu3"
            android:layout_width="0dp"
            android:layout_height="326dp"
            android:src="@drawable/tulis_kata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Tulis Kata"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu3"
            app:layout_constraintStart_toStartOf="@id/logoMenu3"
            app:layout_constraintTop_toBottomOf="@id/logoMenu3" />

        <TextView
            android:id="@+id/descMenu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_tulis_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu3"
            app:layout_constraintStart_toStartOf="@id/titleMenu3"
            app:layout_constraintTop_toBottomOf="@id/titleMenu3" />

        <ImageView
            android:id="@+id/logoMenu4"
            android:layout_width="0dp"
            android:layout_height="326dp"
            android:src="@drawable/tulis_pilih"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Foto Tulisan Kamu"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu4"
            app:layout_constraintStart_toStartOf="@id/logoMenu4"
            app:layout_constraintTop_toBottomOf="@id/logoMenu4" />

        <TextView
            android:id="@+id/descMenu4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_tekan_kamera_gallery_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu4"
            app:layout_constraintStart_toStartOf="@id/titleMenu4"
            app:layout_constraintTop_toBottomOf="@id/titleMenu4" />

        <ImageView
            android:id="@+id/logoMenu5"
            android:layout_width="0dp"
            android:layout_height="326dp"
            android:src="@drawable/tulis_crop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Ambil foto dan sesuaikan"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu5"
            app:layout_constraintStart_toStartOf="@id/logoMenu5"
            app:layout_constraintTop_toBottomOf="@id/logoMenu5" />

        <TextView
            android:id="@+id/descMenu5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_ambil_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu5"
            app:layout_constraintStart_toStartOf="@id/titleMenu5"
            app:layout_constraintTop_toBottomOf="@id/titleMenu5" />

        <ImageView
            android:id="@+id/logoMenu6"
            android:layout_width="0dp"
            android:layout_height="326dp"
            android:src="@drawable/tulis_lanjut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Cek Jawabanmu"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu6"
            app:layout_constraintStart_toStartOf="@id/logoMenu6"
            app:layout_constraintTop_toBottomOf="@id/logoMenu6" />

        <TextView
            android:id="@+id/descMenu6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_check_answer_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu6"
            app:layout_constraintStart_toStartOf="@id/titleMenu6"
            app:layout_constraintTop_toBottomOf="@id/titleMenu6" />

        <ImageView
            android:id="@+id/logoMenu7"
            android:layout_width="0dp"
            android:layout_height="326dp"
            android:src="@drawable/tulis_salah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/titleMenu7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="Jawaban Salah"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logoMenu7"
            app:layout_constraintStart_toStartOf="@id/logoMenu7"
            app:layout_constraintTop_toBottomOf="@id/logoMenu7" />

        <TextView
            android:id="@+id/descMenu7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_jawaban_salah"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/titleMenu7"
            app:layout_constraintStart_toStartOf="@id/titleMenu7"
            app:layout_constraintTop_toBottomOf="@id/titleMenu7" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintEnd_toStartOf="@+id/menu2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu1"
            app:layout_constraintEnd_toStartOf="@+id/menu3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/menu1"
            app:layout_constraintTop_toTopOf="@id/menu1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu2"
            app:layout_constraintEnd_toStartOf="@+id/menu4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu2"
            app:layout_constraintTop_toTopOf="@+id/menu2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu3"
            app:layout_constraintEnd_toStartOf="@+id/menu5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu3"
            app:layout_constraintTop_toTopOf="@+id/menu3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu4"
            app:layout_constraintEnd_toStartOf="@+id/menu6"
            app:layout_constraintStart_toEndOf="@+id/menu4"
            app:layout_constraintTop_toTopOf="@+id/menu4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu5"
            app:layout_constraintEnd_toStartOf="@+id/menu7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu5"
            app:layout_constraintTop_toTopOf="@+id/menu5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            app:altSrc="@drawable/circle_full"
            app:layout_constraintBottom_toBottomOf="@+id/menu6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu6"
            app:layout_constraintTop_toTopOf="@+id/menu6"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/circle"
            app:tint="@color/black" />


        <TextView
            android:id="@+id/ivPressingSpeakerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Panduan\nTulis Tangan"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
